# bevy-game-template

./: Cargo.toml  README.md
.cargo/: config.toml
assets/: texture.assets.ron
src/: lib.rs  main.rs
